--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -43,7 +43,8 @@
 @media screen and (max-width: 480px) {
   /* Adjust styles for mobile devices */
   .pl {
-    margin-top:50px;
+    margin-top:150px;
+    padding-top:180px;
   }
 
   /* Adjust width of '.pl-texts' on mobile */
