--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -43,8 +43,7 @@
 @media screen and (max-width: 480px) {
   /* Adjust styles for mobile devices */
   .pl {
-    margin-top:150px;
-    padding-top:180px;
+    padding-top:30Vh;
   }
 
   /* Adjust width of '.pl-texts' on mobile */
@@ -56,6 +55,9 @@
   /* Adjust font size and margin of the title on mobile */
   .pl-title {
     font-size: 50px;
-    margin-left: 45px;
+    margin-left: 25px;
+  }
+  .pl-desc {
+   margin:5px;
   }
 }
