--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,5 @@
 .a {
-  margin-top: 150px;
+  margin-top: 10vh;
   margin-bottom: 150px;
   height: 100vh;
   display: flex;
@@ -105,7 +105,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10 10 10 10px;
+    padding: 10 10 10 0px;
 
 }
 
@@ -129,7 +129,8 @@
 @media screen and (max-width:480px) {
   .a{
     flex-direction: column;
-    margin-top: 250px;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
   }
 
   .a-left {
@@ -149,8 +150,9 @@
 .i-img-profile{
   border-radius: 50%;
   position: absolute;
-  height:300px;
-  width: 100%;
+  height: 280px;
+  width: 280px;
+  
 }
 
 
