--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color:transparent;
-    padding-top: 20px;
+    padding: 50px;
     margin-top: 180px;
     text-align: center;
     color: #ffffff;
