--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,7 @@
 .a {
   margin-top: 10vh;
-  margin-bottom: 150px;
-  height: 100vh;
+  margin-bottom:40vh;
+  height: 90vh;
   display: flex;
   align-items: center;
 
