--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -396,9 +396,8 @@ button {
   .c{
     height: 50%;
     margin-bottom:5px;
-    margin-top: 350px;
     padding-bottom: 0px;
-    padding-top: 350px;
+    padding-top: 50vh;
   }
   
   .c-wrapper {
