--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -4,7 +4,7 @@
   flex-direction: column; /* Stack elements vertically */
   align-items: center; /* Center content horizontally */
   text-align: center; /* Center align text */
-  padding: 20px 50px; /* Adjust padding for top and bottom, and horizontal spacing */
+  padding: 20px 80vh; /* Adjust padding for top and bottom, and horizontal spacing */
   margin-top: 80px; /* Spacing from the top */
   margin-bottom: 150px; /* Spacing from the bottom */
   height:600px;
@@ -44,8 +44,7 @@
 @media screen and (max-width: 480px) {
   /* Adjust styles for mobile devices */
   .pl {
-    margin-top:320px;
-    padding: 10px 5px;
+    margin-top:80vh;
   }
 
   /* Adjust width of '.pl-texts' on mobile */
