--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -4,7 +4,7 @@
   flex-direction: column; /* Stack elements vertically */
   align-items: center; /* Center content horizontally */
   text-align: center; /* Center align text */
-  padding: 20px 50px; /* Adjust padding for top and bottom, and horizontal spacing */
+  padding: 20px ; /* Adjust padding for top and bottom, and horizontal spacing */
   margin-top: 80px; /* Spacing from the top */
   margin-bottom: 150px; /* Spacing from the bottom */
   min-height: 600px; /* Minimum height to ensure content is visible */
