--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -182,6 +182,12 @@
     display: flex;
     padding: 8 8 8 8px;
   }
+
+  .tecnologies{
+    align-items: center;
+    justify-content: center;
+    padding-left: 30px;
+  }
   .container-1{ 
     margin-top: 10px;
     padding-top:12px;
