--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -45,9 +45,9 @@
   /* Adjust styles for mobile devices */
   .pl {
     padding-top: 85vh; /* Adjust top padding for better spacing */
-    height: 50px;
-    margin-top: 40px; /* Reduce top margin on mobile */
-    margin-bottom: 20vh; /* Reduce bottom margin on mobile */
+    min-height: 50px; /* Adjust as needed */
+    margin-top: 5%; /* Reduce top margin on mobile */
+    margin-bottom: 5vh; /* Reduce bottom margin on mobile */
   }
 
   /* Adjust width of '.pl-texts' on mobile */
@@ -58,7 +58,7 @@
   /* Adjust font size and margin of the title on mobile */
   .pl-title {
     font-size: 30px; /* Smaller font size on mobile */
-    margin-left: 25%; /* Remove left margin on mobile */
+    margin-left: 10; /* Remove left margin on mobile */
   }
 
   /* Adjust margin of the description on mobile */
