--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -138,8 +138,6 @@ body{background-color: #33007a;
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
-  right: 0;
 }
 .myText{
   text-decoration: none;
@@ -191,12 +189,15 @@ body{background-color: #33007a;
     flex-direction: column;
   }
  
+  .i-right{
+    width:100%;
+  }
   .i-left-wrapper {
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 70%;
-
+    height: 100%;
+    width: fit-content;
     
   }
 
