--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -139,6 +139,7 @@
 
   .a-left {
     width: 100%;
+    padding:0px;
   }
 
  
@@ -201,7 +202,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5 5  px;
+    padding: 5 3  px;
 }
 .a-title{
   font-size: 50px;
@@ -209,6 +210,7 @@
 }
  a.desc{
   margin: 10px;
+  width:80%;
 
  }
   .a-right{
