--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -46,7 +46,7 @@
 @media screen and (max-width: 480px) {
   /* Adjust styles for mobile devices */
   .p {
-    width: 150vw; /* Set width to 75% of the container on mobile */
+    width: 100%; /* Set width to 75% of the container on mobile */
     height: 30vh; /* Set height to 27% of viewport height on mobile */
   }
 }
