--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -187,6 +187,7 @@ body{background-color: #33007a;
 @media screen and (max-width: 480px) {
   .i {
     flex-direction: column;
+    width: 100%;
   }
  
   .i-right{
