--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -187,12 +187,14 @@ body{background-color: #33007a;
 @media screen and (max-width: 480px) {
   .i {
     flex-direction: column;
-    width: 100%;
+    padding: 0;
   }
  
   .i-right{
     width:100%;
-    height: 200%;
+    height:auto;
+    margin-left: 5px ;
+    padding:0;
 
   }
   .i-left-wrapper {
@@ -200,7 +202,6 @@ body{background-color: #33007a;
     justify-content: center;
     text-align: center;
     height: 100%;
-    width: fit-content;
     
   }
 
