--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -194,7 +194,7 @@ body{background-color: #33007a;
     width:100%;
     height:auto;
     margin-left: 5px ;
-    padding:0;
+    padding:5px;
 
   }
   .i-left-wrapper {
