--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -42,12 +42,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: relative;
+  position: absolute;
 }
 
 .a-award-img {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border-radius: 20px;
   margin-right: 30px;
   display: flex;
