--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -80,7 +80,7 @@ body{background-color: #33007a;
 }
 
 .i-title-wrapper {
-  height: 100%;
+  height: 80%;
   animation: move 10s ease-in-out infinite alternate;
   background-color: transparent;
 }
@@ -114,13 +114,12 @@ body{background-color: #33007a;
 .i-dev{
   font-size:25px;
   margin-left:30px;
-
   
 }
 
 .i-scroll {
   width: 30px;
-  height: 30px;
+  height: 150px;
   position: absolute;
   bottom: -150px;
 }
@@ -161,14 +160,14 @@ body{background-color: #33007a;
 }
 #color2 h1{
     background-size: 400%;
-    border-color: #52bbccbf;
+    border-color: rgba(115, 0, 255, 0.749);
 }
 #color3 h1{
     background-size: 200%;
-    border-color: #fff8b9;
+    border-color: rgb(226, 86, 244);
 }
 .myText h1:before{
-    text-shadow: 4px 2px 1px #40adff, 2px 2px 10px #f4b0e7;    
+    text-shadow: 4px 2px 1px #6340ff, 2px 2px 10px #db0cb5;    
    
 }
 
@@ -194,7 +193,7 @@ body{background-color: #33007a;
     width:100%;
     height:auto;
     margin-left: 5px ;
-    padding:5px;
+    padding:10px;
 
   }
   .i-left-wrapper {
@@ -211,7 +210,7 @@ body{background-color: #33007a;
   }
 
   .i-bg{
-    width: 100%;
+    width: 90%;
     height: 90%;
     object-fit: cover;
   }
