update i-right intro

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -191,8 +191,8 @@ body{background-color: #33007a;
  
   .i-right{
     width:100%;
-    height:auto;
-    margin-left: 5px ;
+    height:100%;
+    margin-left:10px ;
     padding:10px;
 
   }
