--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -187,10 +187,11 @@ body{background-color: #33007a;
   .i {
     flex-direction: column;
     padding: 0;
+    object-fit: center;
   }
  
   .i-right{
-    width:90%;
+    width:100%;
     height:80%;
     padding:10px;
 
