--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -193,8 +193,7 @@ body{background-color: #33007a;
   .i-right{
     width:100%;
     height:80%;
-    padding:0px;
-
+    object-fit: center;
   }
   .i-left-wrapper {
     align-items: center;
