--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -194,7 +194,7 @@ body{background-color: #33007a;
   .i-right{
     width:100%;
     height:80%;
-    object-fit: center;
+    object-fit:cover;
   }
   .i-left-wrapper {
     align-items: center;
