--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -195,6 +195,8 @@ body{background-color: #33007a;
     width:100%;
     height:80%;
     object-fit:cover;
+    padding-left:0 ;
+    align-content: center;
   }
   .i-left-wrapper {
     align-items: center;
