--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -187,14 +187,12 @@ body{background-color: #33007a;
   .i {
     width:100%;
     flex-direction: column;
-    padding: 0;
-    align-self: center;
   }
  
   .i-right{
     width:100%;
-    height:80%;
-    object-fit:cover;
+    height:90%;
+    object-fit:fill;
     padding-left:0 ;
     align-content: center;
   }
