--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -192,7 +192,7 @@ body{background-color: #33007a;
   .i-right{
     width:100%;
     height:90%;
-    object-fit:fill;
+    object-fit:cover;
     padding-left:0 ;
     align-content: center;
   }
