--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -204,7 +204,14 @@ body{background-color: #33007a;
     height: 100%;
     
   }
-
+  .i-img {
+    width: 120%;
+    height: 80%;
+    object-fit: cover;
+    position: absolute;
+    
+  }
+  
   .i-dev{
     font-size:20px;
 
