--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -133,7 +133,7 @@ body{background-color: #33007a;
 }
 
 .i-bg {
-  background-color:white;
+  background-color:rgb(255, 11, 11);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -206,7 +206,7 @@ body{background-color: #33007a;
   }
   .i-img {
     width: 120%;
-    height: 80%;
+    height: 100%;
     object-fit: cover;
     position: absolute;
     
