--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -207,6 +207,7 @@ body{background-color: #33007a;
     height: 100%;
     object-fit: cover;
     position: absolute;
+    padding: 0;
     
   }
   
