--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -58,7 +58,8 @@
   }
 
   h2{
-    font-size:30px ;
+    font-size:25px ;
+    text-align: center;
   }
 
   /* Adjust margin of the description on mobile */
