--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -156,17 +156,13 @@
 .i-img-profile{
   border-radius: 10%;
   position: absolute;
-  height: 280px;
-  width: 280px;
 }
 
 
  .a-card{
-  width: 80%;
-  height:200%;
+  width: 70%;
+  height:100%;
   position:relative;
-  margin-top:90px;
-  margin-bottom: 120px;
   box-shadow: 0 0 10px rgb(201, 125, 255); 
   
  }
@@ -174,7 +170,7 @@
   .a-card.bg {
     display: none;
   }
-  
+  /*
   .a-award-img {
     width: 60px;
     height: 60px;
@@ -184,7 +180,7 @@
     padding: 8 8 8 8px;
   }
 
-
+ 
   .container-1{ 
     margin-top: 10px;
     padding-top:12px;
@@ -194,7 +190,7 @@
     padding-top: 0;
     margin-bottom: 20px;
   }
-  /*.a-award{
+.a-award{
     margin-top: 20px;
     display: flex;
     align-items: center;
