--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -60,6 +60,7 @@
   .pl-title{
     font-size:37px ;
     text-align: center;
+    margin-top: 10px;
   }
 
   /* Adjust margin of the description on mobile */
