--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -133,14 +133,14 @@
 @media screen and (max-width:480px) {
   .a{
     flex-direction: column;
-    padding-top:6vh;
-    padding-bottom: 4vh;
+    padding-top:10vh;
+    padding-bottom: 5vh;
     
   }
 
   .a-left {
     width: 100%;
-    padding:0px;
+    padding-top:10px;
   }
 
  
@@ -160,8 +160,8 @@
 
 
  .a-card{
-  width: 70%;
-  height:100%;
+  width: 80%;
+  height:90%;
   position:relative;
   box-shadow: 0 0 10px rgb(201, 125, 255); 
   
