--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,80 +1,22 @@
 .a {
-  margin-top: 10vh;
-  margin-bottom:20vh;
-  height: 100vh;
   display: flex;
   align-items: center;
+  width:50%;
+
 
 }
 
-.a-left {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  margin-top: -65px;
-}
 
 .a-right {
+  width:45%;
+  position:absolute;
   flex: 1;
-  margin-top: 85px;
+  margin-top: 850px;
+  margin-left:700px;
+
 
 }
 
-.a-card.bg {
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  background-image:url(../../img/about.avif);
-}
-
-.a-card {
-  width: 60%;
-  height: 70vh;
-  border-radius: 30px;
-  position: relative;
-  overflow: hidden;
-  margin-top:20px;
-  }
-
-.i-img-profile {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-}
-
-.a-award-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 20px;
-  margin-right: 30px;
-  display: flex;
-}
-.container-1{ 
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-content:center;
-  align-items:center;
-  margin-top: 10px;
-  padding-top:5px;
- 
-}
-.container-2{ 
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-content:center;
-  align-items:center;
-  margin-top:10px;
-  padding-top: 5px;
-}
-
-.tecnologies{
-  align-items: center;
-  justify-content: center;
-  padding-left: 25px;
-}
 
 .a-title {
   -webkit-text-stroke: 1px #ffffff;
@@ -84,51 +26,10 @@
   font-family: 'Modak';
   text-align: center;
   background-size: 100%;
-  left:20px;
-}
-
-@keyframes fluido {
-    0% { background-position: 0 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0 50% }
+  right:120px;
 }
 
 
-.a-sub {
-  margin: 20px 0px;
-}
-
-.a-desc{
-    font-weight: 300;
-    text-align: left;
-    margin:5px;
-}
-/*
-.a-award{
-    margin-top: 35px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10 10 10 0px;
-
-}
-
-.a-award-texts{
-    width: 70%;
-}
-
-.a-award-title{
-    font-weight: bold;
-    color: #555;
-    margin-bottom: 10px;
-}
-
-
-.a-award-img{
-    box-shadow: 0 0 10px rgb(201, 125, 255); 
-}
-
-*/
 
 @media screen and (max-width:480px) {
   .a{
