--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -5,8 +5,8 @@ body{background-color: #33007a;
 }
 
 .i {
-  display: flex;
-  height: 135vh;
+  display: flex-box;
+  height: 100vh;
   width:100%;
   margin: 0;
   padding: 0;
@@ -32,16 +32,31 @@ body{background-color: #33007a;
   }
 }
 .i-left {
-  flex: 1;
+  height: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
+  object-fit: cover;
 
 }
 
+.i-right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3); /* Capa oscura sobre la imagen */
+  z-index: 1;
+}
+
 .i-right {
-  flex: 1;
+  width: 50%;
+  height: 100%;
+  margin-top: 250px;
   position: relative;
+  z-index: 2;
 }
 
 .i-left-wrapper {
@@ -51,9 +66,7 @@ body{background-color: #33007a;
   flex-direction: column;
   justify-content: space-between;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 60%);
   
   
 }
@@ -119,9 +132,9 @@ body{background-color: #33007a;
 
 .i-scroll {
   width: 30px;
-  height: 200px;
+  height: 400px;
   position: absolute;
-  bottom: -150px;
+  bottom: -250px;
 }
 
 .i-img {
@@ -143,9 +156,8 @@ body{background-color: #33007a;
 
 .myText h1{
     width: fit-content;
-  font-weight: normal;
-  font-size: 6em;
-  font-family: 'Modak';
+  font-weight:800;
+  font-size: 105px;
   text-align: center;
   background-image: url(https://img.freepik.com/free-photo/_40163-61.jpg?size=626&ext=jpg);  
   -webkit-background-clip: text;
@@ -156,6 +168,9 @@ body{background-color: #33007a;
     animation-timing-function: linear;
   animation-name: fluid;
   background-size: 500%;
+  position: relative;
+  bottom: 300px;
+  left:430px;
 }
 #color2 h1{
     background-size: 400%;
