--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -52,9 +52,9 @@ body{background-color: #33007a;
 }
 
 .i-right {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  margin-top: 250px;
+  margin-top: 150px;
   position: relative;
   z-index: 2;
 }
@@ -85,11 +85,11 @@ body{background-color: #33007a;
 }
 
 .i-title {
-  height: 180px;
+  height: 200px;
   overflow: hidden;
- position: relative;
- top:350px;
- margin-left:30px;
+ position: absolute;
+ top:200px;
+ margin-left:500px;
 }
 
 .i-title-wrapper {
@@ -120,7 +120,7 @@ body{background-color: #33007a;
   color: #9341e0;
   display: flex;
   align-items: center;
-  left:280px;
+  left:600px;
   top:-400px;
 }
 
@@ -141,7 +141,8 @@ body{background-color: #33007a;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+  position: absolute;  
+  object-position: center;
   
 }
 
@@ -200,7 +201,6 @@ body{background-color: #33007a;
 @media screen and (max-width: 480px) {
   .i {
     width:100%;
-    flex-direction: column;
     align-content: center;
   }
  
@@ -210,12 +210,15 @@ body{background-color: #33007a;
     object-fit:cover;
     align-content: center;
     justify-content: center;
+    position: absolute;
+    margin-top: -180px;
   }
   .i-left-wrapper {
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 100%;
+    
   }
   .i-img {
     width:115%;
@@ -244,18 +247,18 @@ body{background-color: #33007a;
     display:none;
   }
   .orv {
-    width: 350px;
-    height:350px;
-    padding:0px;
+    width: 250px;
+    height:250px;
+    padding:25px;
   }
   .text{
     position:relative;
-    transform: translate(-3%, -30%);
+    transform: translate(-65%, -90%);
     
 
    }
    .myText h1{
-    font-size: 70px;
+    font-size: 50px;
   }
   .i-dev{
     font-size:20px;
