--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -75,14 +75,6 @@ body{background-color: #33007a;
  transform: translate(-145%, 50%);
 }
 
-.i-intro {
-  font-size: 30px;
-  font-weight: 300;
-}
-
-.i-name {
-  font-size: 40px;
-}
 
 .i-title {
   height: 200px;
@@ -124,11 +116,6 @@ body{background-color: #33007a;
   top:-400px;
 }
 
-.i-dev{
-  font-size:25px;
-  margin-left:30px;
-  
-}
 
 .i-scroll {
   width: 30px;
@@ -146,11 +133,7 @@ body{background-color: #33007a;
   
 }
 
-.i-bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
+
 .myText{
   text-decoration: none;
 }
@@ -199,80 +182,26 @@ body{background-color: #33007a;
 
 
 @media screen and (max-width: 480px) {
-  .i {
-    width:100%;
-    align-content: center;
+ 
+  .i-left-wrapper {
+    height: 100%;
+    position: absolute;
   }
  
-  .i-right{
-    width:100%;
-    height:90%;
-    object-fit:cover;
-    align-content: center;
-    justify-content: center;
-    position: absolute;
-    margin-top: -180px;
-  }
-  .i-left-wrapper {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-    
-  }
-  .i-img {
-    width:115%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    padding: 0;
-    
-  }
   
-  .i-dev{
-    font-size:20px;
+.orv{
+  width: 250px;
+  height: 250px;
+  padding: 5px;
+}
 
-  }
+.myText h1{
+  size: 250px;
+}
 
-  .i-bg{
-    width: 90%;
-    height: 90%;
-    object-fit: cover;
-  }
-  .i-desc{
-    display: none;
-  }
-  
-  .i-scroll{
-    display:none;
-  }
-  .orv {
-    width: 250px;
-    height:250px;
-    padding:25px;
-  }
-  .text{
-    position:relative;
-    transform: translate(-65%, -90%);
-    
+.i-right {
+  margin-top: 140px;
+}
 
-   }
-   .myText h1{
-    font-size: 50px;
-  }
-  .i-dev{
-    font-size:20px;
-    
-  }
 
-  .i-title-item {
-    height: 55px;
-    font-size: 40px;
-    left:0px;
-  
-  }
-  
-  .i-title{
-    margin-top:-170px;
-  }
 }
