--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -190,23 +190,22 @@ body{background-color: #33007a;
   height: 330px;
   padding: 5px;
 }
-.i-left{
-  font-size: 20px;
-}
 
 .i-right {
   width: 100%;
   margin-top: 80px;
 }
 
-.text{
-  font-size: 25px;
+.myText h1{
+font-size:60px;
+margin-top:65px;
+margin-left: 250px;
 }
 
 /*About section*/
 
 .i-title{
-  width: 80%;
+  width: 100%;
   margin-top: 80px;
   margin-left: 50px;
 }
@@ -214,9 +213,12 @@ body{background-color: #33007a;
  font-size:28px;
 }
 .i-left-wrapper{
-  height: 80%;
+  height: 100%;
   width: 50%;
   margin-left: 250px;
+}
+.i-left{
+  font-size: 20px;
 }
 
 
